[package]
name = "reload_rustdx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = ">=4.5.57", features = ["derive"] }
indicatif = ">=0.18.0"
polars = { version = ">=0.53.0", features = ["lazy", "cum_agg"] }
rayon = ">=1.10"
reqwest = { version = ">=0.12", features = ["blocking", "rustls-tls"], default-features = false }
zip = "2"

[dev-dependencies]
criterion = { version = ">=0.5", features = ["html_reports"] }

[[bench]]
name = "throughput"
harness = false
